WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278849
WebCodecs decode/encode/flush callbacks should not take a pending activity
https://bugs.webkit.org/show_bug.cgi?id=278849
Summary
WebCodecs decode/encode/flush callbacks should not take a pending activity
youenn fablet
Reported
2024-08-29 00:12:25 PDT
WebCodecs decode/encode/flush callbacks should not take a pending activity
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-29 00:12:54 PDT
<
rdar://problem/134917736
>
youenn fablet
Comment 2
2024-08-29 00:22:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32882
EWS
Comment 3
2024-08-29 04:29:52 PDT
Committed
282895@main
(884664eacfb9): <
https://commits.webkit.org/282895@main
> Reviewed commits have been landed. Closing PR #32882 and removing active labels.
EWS
Comment 4
2024-08-30 21:10:42 PDT
Committed
280938.301@safari-7619-branch
(330afd77c0c6): <
https://commits.webkit.org/280938.301@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1691 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug